tests/negative/gold/empty-block-eos-test.gold
tests/negative/empty-block-eos-test.toit:9:8: error: Empty blocks are not allowed
    foo:
       ^
Couldn't find 'main' (with 0 or 1 argument) in entry file 'tests/negative/empty-block-eos-test.toit'
Compilation failed
